demoapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demoapi
  template:
    metadata:
      labels:
        app: demoapi
    spec:
      containers:
      - name: demoapi
        image: ghcr.io/keremcivelek/demoapi:1.1
        ports:
        - containerPort: 8080
