demoapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demoapi
spec:
  selector:
    app: demoapi
  ports:
  - port: 80
    targetPort: 8080
